# coldgaze-engine

./: .gitattributes  .gitignore  .gitmodules  README.md
coldgaze/: CMakeLists.txt  Coldgaze.sln
coldgaze/assets/models/FlightHelmet/glTF/: FlightHelmet.gltf
coldgaze/assets/models/MaterialBall/: Readme.md  scene.gltf
coldgaze/assets/shaders/: closesthit.rchit  closesthitPBR.rchit  closesthitPreview.rchit  glTF_PBR.frag  glTF_PBR.vert  glTF_PBR_RTX.frag  glTF_PBR_RTX.vert  irradianceFilter.frag  mesh.frag  mesh.vert  miss.rmiss  missPBR.rmiss  raygen.rgen  raygenPBR.rgen  raygen_PBR.rgen  raypayload.glsl  skybox.frag  skybox.vert
coldgaze/assets/shaders/compiled/: closesthit.rchit.spv  closesthitPBR.rchit.spv  closesthitPreview.rchit.spv  closesthit_PBR.rchit.spv  filter.vert.spv  glTF_PBR.frag.spv  glTF_PBR.vert.spv  glTF_PBR_RTX.frag.spv  glTF_PBR_RTX.vert.spv  irradianceFilter.frag.spv  mesh.frag.spv  mesh.vert.spv  miss.rmiss.spv  missPBR.rmiss.spv  raygen.rgen.spv  raygenPBR.rgen.spv  raypayload.glsl.spv  skybox.frag.spv  skybox.vert.spv  triangle.vert.spv  ui.frag.spv  ui.vert.spv
coldgaze/assets/textures/hdr/: Malibu_Overlook_3k.hdr  Serpentine_Valley_3k.hdr  anniversary_lounge_4k_blur.hdr
coldgaze/libs/vulkan/: libvulkan.so.1  vulkan-1.lib
coldgaze/libs/win32/assimp/: assimp-vc140-mt.lib
coldgaze/libs/win32/vulkan/: libvulkan.so.1.1.73  vulkan-1.lib
coldgaze/src/: CMakeLists.txt  coldgaze - Shortcut.lnk
coldgaze/src/framework/: Forwards.hpp  ProxyFunctions.h  Renderer.cpp  VScopedPtr.hpp  VulkanDebugCallbacks.hpp  Window.h  defines.h  framework.sln  main.cpp
coldgaze/src/framework/Core/: Engine.hpp  EngineConfig.hpp  EngineImpl.hpp  InputHandler.hpp  TriangleEngine.hpp  Window.hpp
coldgaze/src/framework/Core/Private/: Engine.cpp  EngineImpl.cpp  InputHandler.cpp  TriangleEngine.cpp
coldgaze/src/framework/ECS/: ICGSystem.hpp
coldgaze/src/framework/ECS/Components/: CameraComponent.hpp  LightComponent.hpp
coldgaze/src/framework/ECS/Components/Private/: CameraComponent.cpp
coldgaze/src/framework/ECS/Systems/: CameraSystem.cpp  CameraSystem.hpp  LightSystem.hpp
coldgaze/src/framework/ECS/Systems/Private/: CameraSystem.cpp  LightSystem.cpp
coldgaze/src/framework/Render/Vulkan/: Buffer.hpp  CubeTexture.hpp  Debug.hpp  Device.hpp  Exceptions.hpp  ImGuiImpl.hpp  Initializers.hpp  LayoutDescriptor.hpp  Model.hpp  SkyBox.hpp  SwapChain.hpp  Texture.hpp  Texture2D.hpp  UniformBufferVS.hpp  Utils.hpp
coldgaze/src/framework/Render/Vulkan/Private/: CubeTexture.cpp  Debug.cpp  Device.cpp  ImGuiImpl.cpp  Model.cpp  SkyBox.cpp  SwapChain.cpp  Texture.cpp  Texture2D.cpp  UniformBufferVS.cpp  Utils.cpp
coldgaze/src/framework/RenderModule/VulkanApi/: Renderer.cpp  Renderer.h
coldgaze/src/framework/SystemCore/: Application.cpp  Application.h  DevicePicker.cpp  QueueSelector.cpp  QueueSelector.h  Window.cpp  Window.h
coldgaze/src/framework/Utils/: Vulkan.hpp
coldgaze/src/framework/Utils/Private/: Vulkan.cpp
coldgaze/src/framework/core/: EngineConfig.hpp  engine.hpp  engine_config.hpp
coldgaze/src/framework/core/private/: engine.cpp
coldgaze/src/framework/framework/: Application.cpp  Application.h  DevicePicker.cpp  DevicePicker.h  Forwards.hpp  ProxyFunctions.h  Renderer.h  VScopedPtr.hpp  Window.cpp  Window.h  defines.h  framework.vcxproj  framework.vcxproj.filters  main.cpp
coldgaze/src/temp/framework/: Forwards.hpp  Renderer.h  VScopedPtr.hpp
